objects/ASG_to_Prod_Feat_Junc__c.object
<CustomObject>
    <fields>
        <fullName>Advanced_Support_Group__c</fullName>
        <label>Advanced Support Group</label>
        <referenceTo>Advanced_Support_Groups__c</referenceTo>
        <relationshipLabel>ASG to Prod Feat Juncs</relationshipLabel>
        <relationshipName>ASG_to_Prod_Feat_Juncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>ASG to Prod Feat Juncs</relationshipLabel>
        <relationshipName>ASG_to_Prod_Feat_Juncs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ASG to Prod Feat Junc</label>
    <nameField>
        <label>ASG to Prod Feat Junc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASG to Prod Feat Juncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>